bug(projectThumbnail): Fix overflow on devsearch
Temporary fix for the overflow. Not really working perfectly.

--- a/client/app/components/projectThumbnail/projectThumbnail.css
+++ b/client/app/components/projectThumbnail/projectThumbnail.css
@@ -35,8 +35,8 @@
   cursor: pointer;
   z-index: 1;
 
-  width: 96%;
-  height: 67%;
+  width: 215px;
+  height: 150px;
 }
 
 /* Project Details */
@@ -47,10 +47,20 @@ h4.project-name {
 }
 
 .project-description {
-  width: 95%;
+  width: 210px;
+  max-height: 80px;
+  display: relative;
   font-size: 0.9em;
   color: #444444;
   text-align: center;
+  border: 2px solid salmon;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.project-date {
+  color: #444444;
 }
 
 /* Profile Info */
@@ -61,8 +71,8 @@ h4.project-name {
 /* Image */
 
 .project-thumbnail-img-viewport {
-  width: 100%;
-  height: 70%;
+  width: 215px;
+  height: 150px;
   overflow: hidden;
   padding: 0px;
 
